Fix ignoring return value warning in case of gcc 4.4.4 https://bugs.webkit.org/show_bug.cgi?id=45384

Patch by Peter Varga <pvarga@inf.u-szeged.hu> on 2010-09-08
Reviewed by Kenneth Rohde Christiansen.

* DumpRenderTree/TestNetscapePlugIn/PluginObject.cpp:
(testPostURLFile):
If fwrite have written zero byte then the testPostURLFile function
returns with false as tempFile can't be opened.
* DumpRenderTree/qt/ImageDiff.cpp:
(main):
Put fwrite function into an if condition without body to avoid
warning. It is safe because this function writes to the stdout.



Canonical link: https://commits.webkit.org/57737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66984 268f45cc-cd09-0410-ab3c-d52691b4dbfc